<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:iconTint="@color/black">
    </item>

    <item android:id="@+id/favouriteFragment"
        android:title="@string/favourite"
        android:icon="@drawable/heart"
        android:iconTint="@color/black">
    </item>

    <item android:id="@+id/mapsFragment"
        android:title="@string/maps"
        android:icon="@drawable/map"
        android:iconTint="@color/black">
    </item>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/user"
        android:iconTint="@color/black">
    </item>

</menu>