<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favItem"
    android:layout_width="320dp"
    android:layout_height="225dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="10dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="@color/LogoTheme"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginStart="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/favLandmark"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"

        android:contentDescription="@string/picture_of_landmark" />

    <TextView
        android:id="@+id/landmarkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landmark"
        android:layout_marginStart="120dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/landmarkCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_marginStart="120dp"
        android:layout_marginTop="120dp"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="225dp"
        android:src="@drawable/line"
        android:contentDescription="@string/distance" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="150dp"
        android:src="@drawable/distance"

        android:contentDescription="@string/distance" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="250dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/time2"
        android:contentDescription="@string/duration" />

    <TextView
        android:id="@+id/landmarkDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginStart="180dp"
        android:layout_marginTop="175dp"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/landmarkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginStart="280dp"
        android:layout_marginTop="175dp"
        android:textColor="@color/white"
        android:textSize="12sp"/>


</androidx.cardview.widget.CardView>