<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgo"
    tools:context=".ForgotPassword">

    <ImageButton
        android:id="@+id/fpBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/back"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/tv_fp_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_fp_heading"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password_description"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_description"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/email"
        />


    <ImageView
        android:id="@+id/fp_background"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo"
        android:layout_marginTop="120dp"
        android:layout_marginStart="150dp"
        android:contentDescription="@string/background_circle" />

    <ImageView
        android:id="@+id/fp_send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo"
        android:layout_marginTop="125dp"
        android:layout_marginStart="150dp"
        android:contentDescription="@string/send_delivered_icon" />

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fp_Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fp_background"
        android:layout_marginTop="100dp"
        app:hintTextColor="@color/black"
        app:boxBackgroundColor="@color/LogoTheme"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFpEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_fp_remPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_fp_Email"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/black"
        android:text="@string/remember_password"/>

    <TextView
        android:id="@+id/tv_fp_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_fp_Email"
        android:layout_marginTop="100dp"
        android:layout_marginStart="150dp"
        android:text="@string/login"
        android:textColor="@color/blue"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_fp_login"
        android:layout_marginTop="50dp"
        app:cornerRadius="10dp"
        android:text="@string/send"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/LogoTheme"/>

</androidx.constraintlayout.widget.ConstraintLayout>