<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LogoTint"
    tools:context=".MyProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:src="@drawable/user"
        app:civ_border_width="2dp"/>

    <EditText
        android:id="@+id/edtProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivProfile"
        android:layout_marginTop="180dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edtProfileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtProfileUsername"
        android:layout_marginTop="80dp"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edtProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtProfileNumber"
        android:layout_marginTop="80dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>