<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:src="@drawable/user"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/tvProfileUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivProfile"
            android:layout_marginTop="110dp"
            android:text="@string/username"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfileUsername"
            android:layout_marginTop="30dp"
            android:text="@string/username"
            android:textSize="12sp"/>

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfileEmail"
            android:src="@drawable/user_profile"
            android:layout_marginTop="80dp"
            android:layout_marginStart="80dp"
            app:tint="@color/black"
            android:contentDescription="@string/user_image" />

        <TextView
            android:id="@+id/tvProfileUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfileEmail"
            android:layout_marginTop="83dp"
            android:layout_marginStart="130dp"
            android:text="@string/my_profile"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivUser"
            android:src="@drawable/icon_feather_settings"
            android:layout_marginTop="80dp"
            android:layout_marginStart="80dp"
            app:tint="@color/black"
            android:contentDescription="@string/settings" />

        <TextView
            android:id="@+id/tvProfileSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProfileUser"
            android:layout_marginTop="80dp"
            android:layout_marginStart="130dp"
            android:text="@string/settings"
            android:clickable="true"
            android:focusable="true" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"/>

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/logout_profile2"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            app:tint="@color/black"
            android:contentDescription="@string/logout" />

        <TextView
            android:id="@+id/tvProfileLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="30dp"
            android:text="@string/logout"
            android:clickable="true"
            android:focusable="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>